use pdpbox1 in .cfg file

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ description-file = README.md
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = pdpbox/_version.py
-versionfile_build = pdpbox/_version.py
+versionfile_source = pdpbox1/_version.py
+versionfile_build = pdpbox1/_version.py
 tag_prefix = v
 parentdir_prefix = PDPbox1-
